fix(Navbar): discord component overlapping navlinks

--- a/styles/components/navbar.scss
+++ b/styles/components/navbar.scss
@@ -199,6 +199,6 @@
 
 @media screen and (max-width: 500px) {
 	.navbar-discord .discord-container {
-		transform: scale(0.55) translateX(-12em) translateY(-7rem);
+		transform: scale(0.55) translateX(-12rem) translateY(-3rem);
 	}
 }
